# flask-music

./: README.md  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  storage.db
app/controllers/: application.py  default.py  login.py  register.py
app/models/: form.py  user.py
app/templates/: application.html  base.html  login.html  register.html
migrations/versions/: d9dd5075ccdf_.py
