[tool.poetry]
name = "flask_music"
version = "0.1.0"
description = "Simple music player application made with Flask for my Web Programming Class"
authors = ["Natália Fonseca <nataliabf@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
